<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.froggy.dentistofficetracker.TodoList"
    tools:showIn="@layout/activity_todo_list">


    <RelativeLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:id="@+id/relativeLayout">
        
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@drawable/creative" android:contentDescription="@string/dentistofficecalendar" />

        <TextView
            android:id="@+id/DateBanner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="17dp"
            android:layout_marginStart="17dp"
            android:layout_marginTop="59dp"
            android:text="@string/_29_march"
            android:textColor="#000000"
            android:textSize="40sp" />


    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/add_task_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/relativeLayout"></android.support.v7.widget.RecyclerView>

    <TextView
        android:id="@+id/DayBanner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:text="@string/monday"
        android:textColor="#000000"
        android:textSize="40sp" />


</RelativeLayout>
